# HttpsServer

./: .clang-format  .travis.yml  .trevis.yml  CMakeLists.txt  HttpParser.cpp  HttpParser.h  HttpsServer.cpp  HttpsServer.h  README.md  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  TLSServerSocket.cpp  TLSServerSocket.h  TLSSocket.cpp  TLSSocket.h  conanfile.txt  main.cpp
.github/workflows/: Build.yml
clientExample/: main.cpp
include/: ChunkBuilder.h  ClientHandler.h  HttpParser.h  HttpResponseBuilder.h  HttpServer.h  IOSocket.h  Logger.h  ServerSocket.h
src/: ClientHandler.cpp  HttpParser.cpp  HttpResponseBuilder.cpp  HttpServer.cpp  IOSocket.cpp  Logger.cpp  ServerSocket.cpp  main.cpp
